# llm-chunking

./: .gitignore  README.md  data.md  main.py  pyproject.toml
modules/01_test_key/: main.py
modules/02_test_agents/: main.py
modules/03_token_chunker/: main.py
modules/04_recursive_chunker/: main.py
modules/05_sentence_chunker/: main.py
modules/06_semantic_chunker/: main.py
modules/07_qdrant/: main.py
modules/08_qdrant_multivector/: main.py
modules/09_qdrant_multivector_query/: main.py  utils.py
